# kindle-weather-rs

./: Cargo.toml  README.md
src/: aqi.rs  bible.rs  fund.rs  http.rs  main.rs  sci.rs  sun.rs  svg_data.rs  weather.rs
