[package]
name = "kindle-weather-rs"
version = "0.1.0"
authors = ["Gris Ge <cnfourt@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "*", features = ["blocking"]}
clap = "2.33.0"
dirs = "2.0.2"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strfmt = "0.1.6"
chrono = "0.4.10"
chrono-tz = "0.5.1"
select = "0.4.3"
