[package]
name = "kindle-weather-rs"
version = "0.1.0"
authors = ["Gris Ge <cnfourt@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking", "gzip"] }
clap = "3.1.6"
dirs = "4.0.0"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
strfmt = "0.1.6"
chrono = "0.4.19"
chrono-tz = "0.6.1"
select = "0.5.0"
